# CRUD-FastAPI-Task-List

./: .gitignore  LICENSE  main.py  pyproject.toml  readme.md
src/: tasklist.py
src/fastapi_tasklist_sus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/tasklist.egg-info/: PKG-INFO  SOURCES.txt
