[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-tasklist-sus"
version = "0.1.1"
description = "A FastAPI-based task list API with CRUD operations"
readme = "readme.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "SUS", email = "example@example.com"}
]
keywords = ["fastapi", "task", "api", "crud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/example/fastapi-tasklist"

[project.scripts]
fastapi-tasklist = "tasklist:main"
